# skitgubbe-simulator

./: Cargo.toml  README.md
client/: client.rs
server/: deck.rs  game.rs  game_manager.rs  handler.rs  server.rs
server/game/: deck.rs  mod.rs  player.rs
src/: api.rs  deck.rs  lib.rs  main.rs  user.rs
src/game/: gamestate.rs  mod.rs  player.rs  playercards.rs
