[package]
name = "skitgubbe-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "client/client.rs"

[[bin]]
name = "server"
path = "server/server.rs"

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive", "serde_derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full", "macros", "sync", "rt-multi-thread"] }
websocket = "0.27.0"
