[package]
name = "skitgubbe-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "client/client.rs"

[[bin]]
name = "server"
path = "server/server.rs"

[dependencies]
axum = { version = "0.7.3", features = ["ws"] }
futures = "0.3.30"
futures-util = "0.3.30"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive", "serde_derive"] }
serde_json = "1.0.108"
strum = { version = "0.25.0", features = ["strum_macros"] }
strum_macros = "0.25.3"
tokio = { version = "1.34.0", features = ["full", "macros", "sync", "rt-multi-thread"] }
tokio-tungstenite = "0.21.0"
tower-http = { version = "0.5.0", features = ["cors"] }
url = "2.5.0"
uuid = { version = "1.6.1", features = ["v4"] }
websocket = "0.27.0"
